# Physically-based-deferred-shading

./: .gitmodules  CMakeLists.txt  README.md
core/: CMakeLists.txt
core/common/: CMakeLists.txt
core/common/include/: DataIdentifier.h  DataStore.h  Defines.h  Source.h
core/common/src/: Source.cpp
core/geometry/: CMakeLists.txt
core/geometry/include/: Cube.h  Icosphere.h  Mesh.h  Plane.h  Vertex.h
core/geometry/src/: Mesh.cpp
core/graphics/: CMakeLists.txt
core/graphics/image/: CMakeLists.txt
core/graphics/image/include/: Image.h
core/graphics/image/src/: Image.cpp
core/graphics/material/: CMakeLists.txt
core/graphics/material/include/: Material.h
core/graphics/material/src/: Material.cpp
core/graphics/model/: CMakeLists.txt
core/graphics/model/include/: Model.h  Uniform.h
core/graphics/model/src/: Model.cpp  Uniform.cpp
core/graphics/program/: CMakeLists.txt
core/graphics/program/include/: GeometryProgramGenerator.h  Program.h  ProgramGenerator.h  ProgramRequirement.h  ProgramStore.h  Shader.h
core/graphics/program/src/: GeometryProgramGenerator.cpp  Program.cpp  ProgramGenerator.cpp  ProgramStore.cpp  Shader.cpp
core/graphics/programs/: CMakeLists.txt
core/graphics/programs/include/: Program.h
core/graphics/programs/shaders/: CMakeLists.txt
core/graphics/programs/shaders/include/: Shader.h
core/graphics/programs/shaders/src/: Shader.cpp
core/graphics/programs/src/: Program.cpp
core/graphics/renderdata/: CMakeLists.txt
core/graphics/renderdata/include/: Buffer.h  Camera.h  DataIdentifier.h  DrawKey.h  DrawUnit.h  Material.h  Mesh.h  Model.h  Node.h  RenderData.h  RenderQueue.h  Scene.h  Skybox.h  VertexAttribute.h
core/graphics/renderdata/src/: Camera.cpp  Material.cpp  Mesh.cpp  Model.cpp  Skybox.cpp
core/graphics/renderer/: CMakeLists.txt
core/graphics/renderer/include/: Framebuffer.h  Renderer.h
core/graphics/renderer/src/: Renderer.cpp
core/graphics/rendering/: CMakeLists.txt
core/graphics/rendering/include/: DeferredRenderer.h  ForwardRenderer.h  Framebuffer.h  RenderManager.h  Renderer.h
core/graphics/rendering/src/: DeferredRenderer.cpp  ForwardRenderer.cpp  RenderManager.cpp  Renderer.cpp
core/graphics/scene/: CMakeLists.txt
core/graphics/scene/include/: AssimpLoader.h  Camera.h  Model.h  Node.h  Scene.h  Skybox.h
core/graphics/scene/model/: CMakeLists.txt
core/graphics/scene/model/include/: Model.h
core/graphics/scene/model/src/: Model.cpp
core/graphics/scene/src/: AssimpLoader.cpp  Camera.cpp  Skybox.cpp
core/graphics/texture/: CMakeLists.txt
core/graphics/texture/image/: CMakeLists.txt
core/graphics/texture/image/include/: Image.h
core/graphics/texture/image/src/: Image.cpp
core/graphics/texture/include/: Texture.h  TextureUnitManager.h
core/graphics/texture/src/: TextureUnitManager.cpp
core/graphics/uniforms/: CMakeLists.txt
core/graphics/uniforms/include/: Sampler.h  TextureUnitManager.h  Uniform.h
core/graphics/uniforms/src/: Sampler.cpp  TextureUnitManager.cpp  Uniform.cpp
core/graphics/window/: CMakeLists.txt
core/graphics/window/include/: Window.h
core/graphics/window/src/: Window.cpp
core/input/: CMakeLists.txt
core/input/include/: Input.h  InputEnums.h  KeyboardCallback.h  KeyboardListener.h  MouseCallback.h  MouseListener.h  TimeCallback.h  TimeListener.h
core/input/src/: Input.cpp  KeyboardCallback.cpp  MouseCallback.cpp  TimeCallback.cpp
core/math/: CMakeLists.txt
core/math/geometry/: CMakeLists.txt
core/math/geometry/include/: AxisTriplets.h  Cube.h  Geometry.h  Icosphere.h  Mesh.h  Plane.h  Vertex.h  VertexAttribute.h
core/math/geometry/src/: Cube.cpp  Icosphere.cpp  Plane.cpp
core/math/include/: Degrees.h  Mat4.h  Quaternion.h  Radians.h  Transform.h  Utils.h  Vec2.h  Vec3.h  Vec4.h
core/math/src/: Degrees.cpp  Mat4.cpp  Quaternion.cpp  Radians.cpp  Vec2.cpp  Vec3.cpp  Vec4.cpp
core/renderer/: CMakeLists.txt
core/renderer/include/: Renderer.h
core/window/include/: Window.h
core/window/src/: Window.cpp
demo/: CMakeLists.txt  resources
demo/src/: demo.cpp
renders/: README.md
resources/: ForwardShader.frag  ForwardShader.vert  skybox_up.tga  test.frag  test.vert
resources/Shaders/: Geometry.frag  Geometry.vert  Lighting.frag  Lighting.vert  Skybox.frag  Skybox.vert
resources/images/skybox/: down.tga
resources/models/Bullet/: Bullet.gltf
resources/models/CopperSkeleton/: CopperSkeleton.gltf
resources/models/GreenToyDinosaur/: GreenToyDinosaur.gltf
resources/models/Lantern/: Lantern.gltf
resources/models/SolarPanel/: SolarPanel.gltf
resources/models/WoodBox/: WoodBox.gltf
resources/models/WoodFloor/: WoodFloor.gltf
resources/shaders/: BrdfLUT.frag  BrdfLUT.vert  Geometry.frag  Geometry.vert  IrradianceMap.frag  Lighting.frag  Lighting.vert  PrefilterMap.frag  PrefilterMap.vert  Skybox.frag  Skybox.vert
tests/: CMakeLists.txt  Mat4_Tests.cpp  Quaternion_Tests.cpp  Transform_Tests.cpp  Utils_Tests.cpp  Vec2_Tests.cpp  Vec3_Tests.cpp  Vec4_Tests.cpp
tests/TestUtils/: CMakeLists.txt
tests/TestUtils/include/: TestUtils.h
tests/TestUtils/src/: TestUtils.cpp
